// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LiveProgressIndicator > renders live status and tracks click with enriched payload 1`] = `
<section
  aria-label="Live progress indicator"
  class="rounded-xl border p-5 space-y-3 shadow-sm"
  data-variant="emphasized"
  style="background-color: var(--color-surface); border-color: var(--color-border);"
>
  <div
    class="flex items-center justify-between gap-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <span
        aria-hidden="true"
        class="h-2.5 w-2.5 rounded-full bg-[var(--color-success)] animate-pulse"
      />
      <p
        class="text-sm font-medium text-text"
      >
        Live updates on
      </p>
    </div>
    <p
      aria-label="Live event timestamp"
      class="text-xs text-muted"
    >
      7:00:00 PM
    </p>
  </div>
  <p
    class="text-xs text-muted"
  >
    If realtime is unavailable, PulsePlate stays usable and keeps CTA flow active.
  </p>
  <a
    class="inline-flex rounded-lg bg-primary px-5 py-2.5 text-sm font-semibold text-white"
    data-discover="true"
    href="/setup"
  >
    Refresh setup inputs
  </a>
</section>
`;

exports[`LiveProgressIndicator > renders static fallback and tracks impressions 1`] = `
<section
  aria-label="Live progress indicator"
  class="rounded-xl border p-4 space-y-3"
  data-variant="compact"
  style="background-color: var(--color-surface); border-color: var(--color-border);"
>
  <div
    class="flex items-center justify-between gap-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <span
        aria-hidden="true"
        class="h-2.5 w-2.5 rounded-full bg-[var(--color-warning)]"
      />
      <p
        class="text-sm font-medium text-text"
      >
        Static fallback
      </p>
    </div>
  </div>
  <p
    class="text-xs text-muted"
  >
    If realtime is unavailable, PulsePlate stays usable and keeps CTA flow active.
  </p>
  <a
    class="inline-flex rounded-lg bg-primary px-4 py-2 text-sm font-semibold text-white"
    data-discover="true"
    href="/progress"
  >
    Open progress live
  </a>
</section>
`;
